feat: 만기로직 분기 처리